# kirigami-addons

./: .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KF5KirigamiAddonsConfig.cmake.in  KFKirigamiAddonsConfig.cmake.in  KirigamiAddonsMacros.cmake  Mainpage.dox  README.md  REUSE.toml  ToolBarExample.qml  metainfo.yaml  rules.txt
autotests/: BaseAlbumMaximizeComponentTestCase.qml  CMakeLists.txt  example_albummodel.cpp  example_albummodel.h  qmltests.cpp  tst_album_abstractlistmodel.qml  tst_album_qmllistmodel.qml  tst_album_qmlqobjectmodel.qml  tst_avatar.qml  tst_onboarding.qml  tst_sounds.qml
autotests/data/: discover_hl_720p.webm
examples/FormCardTutorial/: CMakeLists.txt  JsonAboutPage.qml  Main.qml  SettingsPage.qml  main.cpp  resources.qrc
examples/OnboardingTutorial/: CMakeLists.txt  Main.qml  Page1.qml  Page2.qml  Page3.qml  main.cpp
examples/TableViewTutorial/: CMakeLists.txt  book.cpp  book.h  booklistmodel.cpp  booklistmodel.h  booktablemodel.cpp  booktablemodel.h  main.cpp  resources.qrc
src/: CMakeLists.txt  Messages.sh  kirigami-addons-index.qdoc  kirigami-addons.qdocconf
src/app/: CMakeLists.txt  kirigamiapp.cpp  kirigamiapp.h  kirigamiapp.qdoc  kirigamiapp.qdocconf  kirigamiappdefaults.cpp  kirigamiappdefaults.h
src/baseapp/: Action.qml  CMakeLists.txt  ManagedWindow.qml  actionsmodel.cpp  commandbarfiltermodel.cpp  kirigamiabstractapplication.cpp  kirigamiabstractapplication.h  kirigamiactioncollection.cpp  kirigamiactioncollection.h  kirigamiguiitem.cpp  kirigamiguiitem.h  kirigamistandardaction.cpp  kirigamistandardaction.h  kirigamistandardaction_p.h  kirigamitoggleaction.cpp  kirigamitoggleaction.h  kirigamitoggleaction_p.h  shortcutsmodel.cpp  shortcutsmodel_p.h
src/components/: AbstractMaximizeComponent.qml  ActionButton.qml  AlbumMaximizeComponent.qml  AlbumModelItem.qml  AlbumPageIndicator.qml  Avatar.qml  AvatarButton.qml  Banner.qml  BottomDrawer.qml  CMakeLists.txt  ContextMenu.qml  ConvergentContextMenu.qml  DialogRoundedBackground.qml  DoubleActionButton.qml  DoubleFloatingButton.qml  DownloadAction.qml  FloatingButton.qml  FloatingToolBar.qml  GeoJsonDelegate.qml  ImageMaximizeDelegate.qml  MaximizeDelegate.qml  MessageDialog.qml  MessageDialogButton.qml  MessageDialogButtonBox.qml  RadioSelector.qml  SearchPopupField.qml  SegmentedButton.qml  TimezoneSelector.qml  VideoMaximizeDelegate.qml  components.qdoc  components.qdocconf  componentslabsplugin.cpp  componentsplugin.cpp  kirigami-addons-index.qdoc  kirigamiaddonscomponents.qdoc  kirigamiaddonscomponents.qdocconf  messagedialoghelper.cpp  messagedialoghelper.h  nameutils.cpp  nameutils.h  (+4 more)
src/configdialog/: CMakeLists.txt  configdialogplugin.cpp  configdialogplugin.h
src/dateandtime/: CMakeLists.txt  ClockElement.qml  ClockFace.qml  DateDialog.qml  DateInput.qml  DatePicker.qml  DatePopup.qml  DesktopDateInput.qml  KF5KirigamiDateAndTimeAndroid-android-dependencies.xml  MobileDateInput.qml  TimeDialog.qml  TimeInput.qml  TimeLabel.qml  TimePicker.qml  TimePopup.qml  TimezoneTable.qml  TumblerTimePicker.qml  androidintegration.h  dateandtime.qdoc  dateandtime.qdocconf  infinitecalendarviewmodel.cpp  infinitecalendarviewmodel.h  kirigamiaddonsdateandtime.qdocconf  monthmodel.h  qmldir  qmldir.license  types.h  yearmodel.h
src/delegates/: CMakeLists.txt  CheckDelegate.qml  DefaultContentItem.qml  IndicatorItemDelegate.qml  RadioDelegate.qml  RoundedItemDelegate.qml  RoundedTreeDelegate.qml  SubtitleContentItem.qml  delegates.qdocconf  kirigamiaddonsdelegates.qdoc  kirigamiaddonsdelegates.qdocconf  plugin.cpp
src/formcard/: AboutKDE.qml  AboutKDEPage.qml  AboutPage.qml  AbstractFormDelegate.qml  ActionHeader.qml  CMakeLists.txt  FormArrow.qml  FormButtonDelegate.qml  FormCard.qml  FormCardBackground.qml  FormCardDialog.qml  FormCardHeader.qml  FormCardPage.qml  FormCheckDelegate.qml  FormColorDelegate.qml  FormComboBoxDelegate.qml  FormDateTimeDelegate.qml  FormDelegateBackground.qml  FormDelegateSeparator.qml  FormDialog.qml  FormFileDelegate.qml  FormFolderDelegate.qml  FormGridContainer.qml  FormGroup.qml  FormHeader.qml  FormIconDelegate.qml  FormLinkDelegate.qml  FormPasswordFieldDelegate.qml  FormPlaceholderMessageDelegate.qml  FormRadioDelegate.qml  FormRadioSelectorDelegate.qml  FormSectionText.qml  FormSpinBoxDelegate.qml  FormSwitchDelegate.qml  FormTextAreaDelegate.qml  FormTextDelegate.qml  FormTextFieldDelegate.qml  aboutcomponent.cpp  aboutcomponent_p.h  filehelper.cpp  (+6 more)
src/ksvgcompat/: CMakeLists.txt  FrameSvgItem.qml  Svg.qml  SvgItem.qml  ksvgcompatplugin.cpp
src/mobileform/: AboutCard.qml  AboutKDE.qml  AboutPage.qml  AbstractFormDelegate.qml  CMakeLists.txt  FormArrow.qml  FormButtonDelegate.qml  FormCard.qml  FormCardHeader.qml  FormCheckDelegate.qml  FormComboBoxDelegate.qml  FormDelegateBackground.qml  FormDelegateSeparator.qml  FormGridContainer.qml  FormHeader.qml  FormRadioDelegate.qml  FormSectionText.qml  FormSpinBoxDelegate.qml  FormStatusMessage.qml  FormSwitchDelegate.qml  FormTextDelegate.qml  FormTextFieldDelegate.qml
src/onboarding/: CMakeLists.txt  OnboardToolTip.qml  kirigamiaddonsonboarding.qdoc  kirigamiaddonsonboarding.qdocconf  onboarding.cpp  onboarding_p.h  onboardingcontroller.cpp  onboardingcontroller_p.h
src/settings/: CMakeLists.txt  CategorizedSettings.qml  ConfigurationModule.qml  ConfigurationView.qml  ConfigurationsView.qml  SettingAction.qml  ShortcutsConfigurationModule.qml  SpellcheckingConfigurationModule.qml  kirigamiaddonssettings.qdocconf  plugin.cpp  settings.qdoc  settings.qdocconf
src/sounds/: CMakeLists.txt  SoundsPicker.qml  kirigamiaddonssounds.qdocconf  qmldir  sounds.qdoc  sounds.qdocconf  soundspickermodel.cpp  soundspickermodel.h
src/statefulapplication/: Action.qml  CMakeLists.txt  StatefulWindow.qml  abstractkirigamiapplication.cpp  abstractkirigamiapplication.h  actionsmodel.cpp  actionsmodel_p.h  commandbarfiltermodel.cpp  kirigamiactioncollection.cpp  kirigamiactioncollection.h  kirigamiaddonsstatefulapplication.qdocconf  shortcutsmodel.cpp  shortcutsmodel_p.h  statefulapplication.qdoc  (+1 more)
(+260 files in other folders)
